added a new index web page fixes #1

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>k8s-hello sample project</title>
+<title>k8s-jx-spring-test sample project</title>
 </head>
 <body>
 This is the default index.html page for this demo Spring Boot web project.
